--- a/brie-5 Site web pour une entreprise de location/sass&css/home.scss
+++ b/brie-5 Site web pour une entreprise de location/sass&css/home.scss
@@ -4,7 +4,7 @@ header{
     background-color: #352623;
     height: 740px;
     .imgDiv{
-        background: url(imgs/black-framed.jpg);
+        background: url(../imgs/black-framed.jpg);
         background-size: 100%;
         background-repeat: no-repeat;
         width: 50%;
