--- a/brie-5 Site web pour une entreprise de location/sass&css/reservation.scss
+++ b/brie-5 Site web pour une entreprise de location/sass&css/reservation.scss
@@ -9,7 +9,7 @@
     font-family: $fontFamily;
 }
 header{
-    background-image: url(imgs/ferrari.jpg);
+    background-image: url(../imgs/ferrari.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
     height: 100%;
