--- a/brie-5 Site web pour une entreprise de location/sass&css/home.css
+++ b/brie-5 Site web pour une entreprise de location/sass&css/home.css
@@ -3,7 +3,7 @@
   margin: 0;
 }
 
-.topNav button, footer .contact .leftDiv div button, form Button {
+.topNav button, footer .contact .leftDiv div button {
   padding: 5px 12px;
   font-size: 18px;
   background-color: #A98B69;
@@ -13,7 +13,7 @@
   font-family: "Playfair" Display;
 }
 
-.topNav button:hover, footer .contact .leftDiv div button:hover, form Button:hover {
+.topNav button:hover, footer .contact .leftDiv div button:hover {
   color: #A98B69;
   background-color: #fff;
   border: 2px solid #A98B69;
@@ -36,16 +36,20 @@
 }
 
 .topNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background-color: #000;
   position: fixed;
   width: 100%;
   border-bottom: 3px solid #A98B69;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   z-index: 1;
 }
 
-@media (max-width: 767px) {
+@media (max-width: $maxMobile) {
   .topNav {
     display: block;
   }
@@ -54,11 +58,13 @@
 .topNav ul {
   list-style: none;
   color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 24px 0;
 }
 
-@media (max-width: 767px) {
+@media (max-width: $maxMobile) {
   .topNav ul {
     display: block;
   }
@@ -91,6 +97,8 @@
 }
 
 .sideNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: fixed;
   margin-top: 200px;
@@ -98,7 +106,11 @@
 }
 
 .sideNav .themeContainer {
+  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   background-color: #fff;
   border: 2px solid #000;
@@ -109,8 +121,14 @@
 }
 
 .sideNav .themeContainer .theme {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   padding: 8px;
 }
@@ -137,7 +155,8 @@
   background-color: #000;
   position: relative;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 30%;
 }
 
@@ -161,7 +180,8 @@
   background-color: #000;
   position: relative;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 30%;
 }
 
@@ -171,7 +191,8 @@
   background-color: #000;
   position: relative;
   top: 37%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 42.5%;
 }
 
@@ -215,11 +236,15 @@ footer {
 }
 
 footer .contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   padding: 40px 10% 40px 10%;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 18px;
 }
 
@@ -243,6 +268,8 @@ footer .contact .rightDiv div {
 }
 
 footer .contact .rightDiv ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style: none;
 }
@@ -258,8 +285,11 @@ footer .contact .rightDiv ul li img {
 
 footer .links {
   padding: 16px 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   font-size: 16px;
   font-weight: bold;
   border-bottom: 1px solid #000;
@@ -284,103 +314,42 @@ footer .footerButtom p {
 }
 
 header {
-  background-image: url(imgs/ferrari.jpg);
-  background-size: 100%;
-  background-repeat: no-repeat;
-  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #352623;
+  height: 740px;
 }
 
-header div p {
-  color: #f2f2f2;
-  font-size: 50px;
-  padding: 100px;
+header .imgDiv {
+  background: url(../imgs/black-framed.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  width: 50%;
+}
+
+header .discriptiondiv {
+  width: 50%;
+  margin-top: 160px;
+}
+
+header .discriptiondiv p {
+  padding: 16px 0;
+  color: #fff;
   font-family: "Playfair" Display;
+  font-size: 40px;
+}
+
+header .discriptiondiv p i {
+  color: #A98B69;
+}
+
+header .discriptiondiv .lastParagraph {
+  font-size: 20px;
+  color: grey;
 }
 
 section {
-  transform: translateY(-700px);
+  height: 500px;
 }
-
-form {
-  background-color: #fff;
-  border-bottom: 3px solid #A98B69;
-  border-radius: 8px;
-  box-shadow: 0 0 8px 8px rgba(0, 0, 0, 0.2);
-  margin: 24px 16%;
-  padding: 40px;
-}
-
-form .city {
-  display: flex;
-  margin: 16px;
-}
-
-form .city div {
-  width: 50%;
-}
-
-form .city div div {
-  width: 100%;
-  padding: 8px;
-}
-
-form .date {
-  display: flex;
-  padding: 16px;
-  margin: 16px;
-}
-
-form .date div {
-  width: 25%;
-}
-
-form .date div div {
-  width: 100%;
-  padding: 8px;
-}
-
-form .remise {
-  display: flex;
-  padding: 16px;
-  margin: 16px;
-}
-
-form .remise div {
-  width: 50%;
-}
-
-form .remise div div {
-  width: 100%;
-  padding: 8px;
-}
-
-form label {
-  font-size: 18px;
-  font-family: "Playfair" Display;
-}
-
-form input {
-  font-size: 24px;
-  font-family: "Montserrat", sans-serif;
-  border: none;
-  border-bottom: 2px solid #A98B69;
-  border-radius: 4px;
-  width: 90%;
-}
-
-.pub {
-  display: flex;
-  height: 300px;
-  margin: 32px 10%;
-  justify-content: space-between;
-}
-
-.pub .textDiv {
-  background: #A98B69;
-  width: 100%;
-}
-
-.child {
-  width: 30%;
-  background-color: #A98B69;
-}
+/*# sourceMappingURL=home.css.map */
