--- a/brie-5 Site web pour une entreprise de location/sass&css/_nav&footer.css
+++ b/brie-5 Site web pour une entreprise de location/sass&css/_nav&footer.css
@@ -3,7 +3,7 @@
   margin: 0;
 }
 
-#topNav button, footer .contact .leftDiv div button, section #slideContainer #sildeShow button {
+#topNav button, footer .contact .leftDiv div button {
   padding: 5px 12px;
   font-size: 18px;
   background-color: #A98B69;
@@ -13,7 +13,7 @@
   font-family: "Playfair" Display;
 }
 
-#topNav button:hover, footer .contact .leftDiv div button:hover, section #slideContainer #sildeShow button:hover {
+#topNav button:hover, footer .contact .leftDiv div button:hover {
   color: #A98B69;
   background-color: #fff;
   border: 2px solid #A98B69;
@@ -358,221 +358,4 @@ footer .footerButtom {
 
 footer .footerButtom p {
   font-size: 12px;
-}
-
-section {
-  padding-bottom: 200px;
-  background-color: #A98B69;
-}
-
-section .header {
-  height: 240px;
-  background-color: black;
-  margin: 0 7%;
-}
-
-section .header h3 {
-  font-family: "Roboto", sans-serif;
-  color: #fff;
-  font-size: 48px;
-  padding: 120px 0 0 32px;
-}
-
-section #slideContainer {
-  visibility: hidden;
-  position: fixed;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
-  justify-items: center;
-}
-
-section #slideContainer button {
-  color: white;
-  background-color: transparent;
-  font-weight: bold;
-  border: 2px solid #A98B69;
-  border-radius: 12px;
-  padding: 2px 8px;
-  margin: 100px 0 0 16px;
-}
-
-section #slideContainer button:hover {
-  background-color: red;
-  border: 2px solid red;
-}
-
-section #slideContainer #sildeShow {
-  background-image: url();
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-section #slideContainer #sildeShow div {
-  display: flex;
-  width: 100%;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-section #slideContainer #sildeShow div #img2 {
-  position: absolute;
-  right: 0;
-}
-
-section #slideContainer #sildeShow button {
-  font-size: 40px;
-  position: absolute;
-  right: 100px;
-  bottom: 150px;
-}
-
-@media (max-width: 767px) {
-  section #slideContainer #sildeShow {
-    width: 100%;
-    height: 30%;
-    margin-top: 50%;
-    transform: translateY(-50%);
-    border: none;
-  }
-}
-
-@media (min-width: 768px) {
-  section #slideContainer #sildeShow {
-    width: 100%;
-    height: 45%;
-    border: none;
-  }
-}
-
-@media (min-width: 991px) {
-  section #slideContainer #sildeShow {
-    width: 100%;
-    height: 60%;
-  }
-}
-
-@media (min-width: 1200px) {
-  section #slideContainer #sildeShow {
-    width: 96%;
-    height: 76%;
-    margin: 16px auto;
-  }
-}
-
-section .gallery {
-  margin: 0px 7%;
-}
-
-section .gallery .filter {
-  height: 32px;
-  border-bottom: 1px solid #000;
-  margin-bottom: 16px;
-  padding: 0;
-}
-
-section .gallery .filter div {
-  font-family: "Roboto", sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  padding: 0 100px 0 32px;
-}
-
-section .gallery div {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  width: 100%;
-  padding: 24px 0;
-}
-
-section .gallery div div {
-  width: 400px;
-}
-
-section .gallery div div div {
-  display: block;
-  width: 100%;
-  text-align: center;
-}
-
-section .gallery div div div span {
-  font-family: "Roboto", sans-serif;
-  font-size: 20;
-  font-weight: bold;
-  color: #A98B69;
-  background: black;
-}
-
-section .gallery div div div p {
-  font-size: 16px;
-  padding: 8px 0 0 0;
-}
-
-section .gallery div div div {
-  width: 100%;
-  text-align: center;
-}
-
-section .gallery div div div img {
-  height: 160px;
-  width: 290px;
-  padding: 16px 0;
-}
-
-@media (max-width: 767px) {
-  section .gallery div div div img {
-    padding: 5px 0;
-  }
-}
-
-section .gallery div div:hover {
-  border-radius: 8px;
-  box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.1);
-}
-
-section .gallery div div:hover div {
-  box-shadow: none;
-}
-
-section .gallery div div:hover div {
-  box-shadow: none;
-}
-
-section .gallery div div:hover div img {
-  padding: 0;
-  height: 170px;
-  width: 300px;
-  transition: 0.5s all ease-in-out;
-}
-
-@media (max-width: 767px) {
-  section .gallery div div {
-    width: 100%;
-    display: flex;
-  }
-}
-
-@media (min-width: 768px) {
-  section .gallery {
-    margin: 0 3%;
-  }
-}
-
-@media (min-width: 991px) {
-  section .gallery {
-    margin: 0 5%;
-  }
-}
-
-@media (min-width: 1200px) {
-  section .gallery {
-    margin: 0 7%;
-  }
-}
-
-.homeSection {
-  height: 500px;
 }
