--- a/brie-5 Site web pour une entreprise de location/sass&css/inscription.scss
+++ b/brie-5 Site web pour une entreprise de location/sass&css/inscription.scss
@@ -197,7 +197,7 @@
 
 .enregistrerbtn{
     margin-top: 56px;
-    .button{
+    button{
         @extend %buttonStyle;
         width: max-content;
     }
