--- a/brie-5 Site web pour une entreprise de location/sass&css/reservation.css
+++ b/brie-5 Site web pour une entreprise de location/sass&css/reservation.css
@@ -3,7 +3,7 @@
   margin: 0;
 }
 
-.topNav button, footer .contact .leftDiv div button, form Button {
+#topNav button, footer .contact .leftDiv div button, form Button {
   padding: 5px 12px;
   font-size: 18px;
   background-color: #A98B69;
@@ -13,15 +13,13 @@
   font-family: "Playfair" Display;
 }
 
-.topNav button:hover, footer .contact .leftDiv div button:hover, form Button:hover {
+#topNav button:hover, footer .contact .leftDiv div button:hover, form Button:hover {
   color: #A98B69;
   background-color: #fff;
   border: 2px solid #A98B69;
 }
 
-.topNav .logo {
-  float: left;
-  width: 300px;
+#topNav .logo {
   height: 50px;
   color: #fff;
   font-family: "Merienda One", cursive;
@@ -29,76 +27,124 @@
   padding: 12px 0 0 24px;
 }
 
-.topNav .logo span {
+#topNav .logo span {
   font-family: "Roboto", sans-serif;
   color: #A98B69;
   font-weight: bold;
 }
 
-.topNav {
-  display: -webkit-box;
-  display: -ms-flexbox;
+#checkNav {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  #checkNav:checked ~ #topNav {
+    display: block;
+  }
+  #checkNav:checked ~ #checkNavBtn {
+    background-color: transparent;
+    border-bottom: 3px solid transparent;
+  }
+}
+
+#checkNavBtn {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  #checkNavBtn {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    color: #fff;
+    background-color: #000;
+    border-bottom: 3px solid #A98B69;
+    z-index: 50;
+  }
+}
+
+#checkNavBtn img {
+  margin: 24px 0 24px 24px;
+}
+
+#topNav {
   display: flex;
   background-color: #000;
   position: fixed;
   width: 100%;
   border-bottom: 3px solid #A98B69;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   z-index: 1;
 }
 
-@media (max-width: $maxMobile) {
-  .topNav {
-    display: block;
+@media (max-width: 767px) {
+  #topNav {
+    display: none;
+    text-align: center;
+    padding: 72px 0 32px 0;
+    width: 70%;
+    border-right: 3px solid #A98B69;
+    background-color: rgba(0, 0, 0, 0.9);
   }
 }
 
-.topNav ul {
+@media (max-width: 767px) {
+  #topNav .logo {
+    background-color: black;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+  }
+}
+
+#topNav ul {
   list-style: none;
   color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 24px 0;
 }
 
-@media (max-width: $maxMobile) {
-  .topNav ul {
+@media (max-width: 767px) {
+  #topNav ul {
     display: block;
+    padding: 32px 0 0 0;
   }
 }
 
-.topNav ul li {
+#topNav ul li {
   margin-right: 15%;
 }
 
-.topNav ul li a {
+#topNav ul li a {
   text-decoration: none;
   font-family: "Montserrat", sans-serif;
   color: #fff;
   font-weight: bold;
 }
 
-.topNav ul li a:hover {
+#topNav ul li a:hover {
   color: #A98B69;
 }
 
-.topNav button {
+@media (max-width: 767px) {
+  #topNav ul li {
+    margin: 0 0 24px 0;
+  }
+}
+
+#topNav button {
   border: #000;
   background-color: black;
 }
 
-.topNav button:hover {
+#topNav button:hover {
   color: #fff;
   background-color: #A98B69;
   border: none;
 }
 
 .sideNav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   position: fixed;
   margin-top: 200px;
@@ -106,11 +152,7 @@
 }
 
 .sideNav .themeContainer {
-  height: -webkit-max-content;
-  height: -moz-max-content;
   height: max-content;
-  width: -webkit-max-content;
-  width: -moz-max-content;
   width: max-content;
   background-color: #fff;
   border: 2px solid #000;
@@ -121,14 +163,8 @@
 }
 
 .sideNav .themeContainer .theme {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  height: -webkit-max-content;
-  height: -moz-max-content;
   height: max-content;
-  width: -webkit-max-content;
-  width: -moz-max-content;
   width: max-content;
   padding: 8px;
 }
@@ -155,8 +191,7 @@
   background-color: #000;
   position: relative;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   left: 30%;
 }
 
@@ -180,8 +215,7 @@
   background-color: #000;
   position: relative;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   left: 30%;
 }
 
@@ -191,8 +225,7 @@
   background-color: #000;
   position: relative;
   top: 37%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   left: 42.5%;
 }
 
@@ -236,15 +269,11 @@ footer {
 }
 
 footer .contact {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   padding: 40px 10% 40px 10%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   font-size: 18px;
 }
 
@@ -263,13 +292,21 @@ footer .contact .leftDiv div input {
   border: none;
 }
 
+@media (max-width: 767px) {
+  footer .contact .leftDiv {
+    width: 100%;
+  }
+}
+
+footer .contact .rightDiv {
+  padding: 8px 0 8px 16px;
+}
+
 footer .contact .rightDiv div {
-  padding: 8px 0 8px 0;
+  padding: 8px 0;
 }
 
 footer .contact .rightDiv ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   list-style: none;
 }
@@ -283,13 +320,23 @@ footer .contact .rightDiv ul li img {
   width: 30px;
 }
 
+@media (max-width: 767px) {
+  footer .contact .rightDiv {
+    width: 100%;
+    padding: 16px 0 8px 0px;
+  }
+}
+
+@media (max-width: 767px) {
+  footer .contact {
+    display: block;
+  }
+}
+
 footer .links {
   padding: 16px 10%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   font-size: 16px;
   font-weight: bold;
   border-bottom: 1px solid #000;
@@ -313,38 +360,45 @@ footer .footerButtom p {
   font-size: 12px;
 }
 
-header {
+.header {
   background-image: url(../imgs/ferrari.jpg);
-  background-size: 100%;
   background-repeat: no-repeat;
   height: 100%;
 }
 
-header div p {
+.header div p {
   color: #f2f2f2;
   font-size: 50px;
   padding: 100px;
   font-family: "Playfair" Display;
 }
 
+@media (max-width: 767px) {
+  .header {
+    display: none;
+  }
+}
+
 section {
-  -webkit-transform: translateY(-700px);
-          transform: translateY(-700px);
+  transform: translateY(-700px);
+}
+
+@media (max-width: 767px) {
+  section {
+    transform: translateY(0px);
+  }
 }
 
 form {
   background-color: #fff;
   border-bottom: 3px solid #A98B69;
   border-radius: 8px;
-  -webkit-box-shadow: 0 0 8px 8px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 8px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 8px 8px rgba(0, 0, 0, 0.2);
   margin: 24px 16%;
   padding: 40px;
 }
 
 form .city {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin: 16px;
 }
@@ -358,38 +412,125 @@ form .city div div {
   padding: 8px;
 }
 
+@media (max-width: 767px) {
+  form .city div {
+    width: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+  form .city {
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+}
+
 form .date {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 16px;
   margin: 16px;
 }
 
-form .date div {
-  width: 25%;
-}
-
-form .date div div {
-  width: 100%;
-  padding: 8px;
-}
-
-form .remise {
-  display: -webkit-box;
-  display: -ms-flexbox;
+form .date .DateDePrise {
+  width: 50%;
   display: flex;
-  padding: 16px;
-  margin: 16px;
 }
 
-form .remise div {
+form .date .DateDePrise div {
   width: 50%;
 }
 
-form .remise div div {
+form .date .DateDePrise div div {
   width: 100%;
   padding: 8px;
+}
+
+@media (max-width: 767px) {
+  form .date .DateDePrise div {
+    width: 100%;
+  }
+}
+
+form .date .dateDeRetour {
+  width: 50%;
+  display: flex;
+}
+
+form .date .dateDeRetour div {
+  width: 50%;
+}
+
+form .date .dateDeRetour div div {
+  width: 100%;
+  padding: 8px;
+}
+
+@media (max-width: 767px) {
+  form .date .dateDeRetour div {
+    width: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+  form .date {
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+form .age {
+  display: flex;
+  padding: 16px;
+  margin: 16px;
+}
+
+form .age div {
+  width: 50%;
+}
+
+form .age div div {
+  width: 100%;
+  padding: 8px;
+}
+
+@media (max-width: 767px) {
+  form .age div {
+    width: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+  form .age {
+    width: 100%;
+    padding: 5px 0px;
+  }
+}
+
+@media (max-width: 767px) {
+  form .age {
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  form Button {
+    width: 100%;
+    padding: 5px 0px;
+  }
+}
+
+@media (max-width: 767px) {
+  form Button {
+    width: 100%;
+    padding: 5px 0px;
+  }
 }
 
 form label {
@@ -406,24 +547,28 @@ form input {
   width: 90%;
 }
 
+@media (min-width: 768px) {
+  form {
+    margin: 120px 10%;
+    padding: 40px 8px;
+  }
+}
+
+@media (max-width: 767px) {
+  form {
+    margin: 120px 10%;
+    padding: 40px 8px;
+  }
+}
+
 .pub {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 300px;
-  margin: 32px 10%;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  margin: 64px 10%;
+  justify-content: space-between;
 }
 
 .pub .textDiv {
-  background: #A98B69;
+  box-shadow: 0px 0px 16px 2px gray;
   width: 100%;
 }
-
-.child {
-  width: 30%;
-  background-color: #A98B69;
-}
-/*# sourceMappingURL=reservation.css.map */
