--- a/brie-5 Site web pour une entreprise de location/sass&css/_nav&footer.scss
+++ b/brie-5 Site web pour une entreprise de location/sass&css/_nav&footer.scss
@@ -18,8 +18,6 @@
     }
 }
 %logoStyle{
-    float: left;
-    width: 300px;
     height: 50px;
     color: $thirdColor;
     font-family: $logoFont;
@@ -31,7 +29,38 @@
         font-weight: bold;
     }
 }
-.topNav{
+#checkNav{
+    display: none;
+    @media #{$maxMobile}{
+        &:checked ~#topNav {
+        display:block;
+        }
+        &:checked ~#checkNavBtn {
+            background-color: rgba($color: #000000, $alpha: .0);
+            border-bottom: 3px solid rgba($color: #000000, $alpha: .0);
+
+        }
+    }
+}
+#checkNavBtn{
+    display: none;
+    @media #{$maxMobile}{
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        // height: 48px;
+        color: $thirdColor;
+        background-color: $fourthColor;
+        border-bottom: 3px solid $mainColor;
+        z-index: 50;
+    }
+    img{
+        margin: 24px 0 24px 24px;
+    }
+}
+#topNav{
     display: flex;
     background-color: $fourthColor;  
     position: fixed; 
@@ -39,19 +68,31 @@
     border-bottom: 3px solid $mainColor;
     justify-content: space-between;
     z-index: 1;
-    @media(max-width:"$maxMobile"){
-        display: block;
+    @media #{$maxMobile}{
+        display: none;
+        text-align: center;
+        padding: 72px 0 32px 0;
+        width: 70%;
+        border-right: 3px solid $mainColor;
+        background-color: rgba($color: #000000, $alpha: .9);
     }
     .logo{
-       @extend %logoStyle;
+       @extend %logoStyle; 
+       @media #{$maxMobile} {
+        background-color: rgba($color: #000000, $alpha: 1.0); 
+        border-top:1px solid white;
+        border-bottom:1px solid white;
+        }
     }
     ul{ 
         list-style: none;
         color: $thirdColor;    
         display: flex;
         padding: 24px 0;
-        @media (max-width:"$maxMobile") {
+        @media #{$maxMobile} {
             display: block;
+            padding: 32px 0 0 0;
+
         }
         li{
             margin-right: 15%;
@@ -63,6 +104,10 @@
             }
             a:hover{
                 color: $mainColor;
+            }
+            @media #{$maxMobile} {
+                margin: 0 0 24px 0;
+                
             }
         }
     }
@@ -207,11 +252,14 @@ footer{
                     @extend %buttonStyle
                 }
             }
+            @media #{$maxMobile} {
+                width: 100%;     
+            }
         }
-        .rightDiv{
-            
+        .rightDiv{                
+            padding: 8px 0 8px 16px;
             div{
-                padding: 8px 0 8px 0;
+                padding: 8px 0 ;
             }
             ul{
                 display: flex;
@@ -224,6 +272,13 @@ footer{
                     }    
                 }
             }
+            @media #{$maxMobile} {
+               width: 100%;  
+               padding: 16px 0 8px 0px;
+            }
+        }
+        @media #{$maxMobile} {
+            display: block;    
         }
     }
    .links{
